2013-04-21  Ethan A Merritt  <merritt@u.washington.edu>

	* src/gplt_x11.c term/x11.trm:  X11 terminal support for toggling plots
	on/off by left clicking on the corresponding key entry.  The toggle
	works for all x11 plot windows, not just the currently active one.

	* docs/gnuplot.doc src/datafile.c src/datafile.h src/plot2d.c src/save.c
	src/set.c src/show.c src/unset.c src/util.c:  Allow more than one 
	character to be specified as a data field separator.  For example:
	    set datafile separator "|:\t"
	means that a field may be terminated by either | or : or tab.

2013-04-20  Bastian Maerkisch  <bmaerkisch@web.de>

	* src/fit.c|h src/save.c src/set.c src/show.c src/unset.c demo/fit.dem
	docs/gnuplot.doc:  New options for `set fit`. These options will replace
	the FIT_* user variables to be consistent with how the rest of gnuplot's
	options are controlled. For now the `set fit` commands simply set (or
	undefine) the corresponding FIT_ variable to keep backwards compatibility.

2013-04-12  Ethan A Merritt  <merritt@u.washington.edu>

	* src/stats.c:  Fix incorrect memory allocation for large matrices.

2013-04-10  Ethan A Merritt  <merritt@u.washington.edu>

	* term/pslatex.trm (EPSLATEX_set_color):  Revert a portion of the patch
	from 2013-01-08 (Tracker #1199).  Repairs overzealous removal of
	redundant color commands.  Bug #1185.

	* Makefile.am:  Add lisp subdirectory to the list of files in EXTRA_DIST.
	This forces the subdirectory to be recreated even if it is currently
	disabled, and thus allows "make dist" from inside a tree that has been
	configured --without-lisp-files.

2013-04-09  Ethan A Merritt  <merritt@u.washington.edu>

	* src/plot2d.c src/plot3d.c src/set.c(parse_label_options) src/setshow.h
	parse_label_options() is called both from "set label ..." and from
	"plot ... with labels". The latter case should not accept keywords "at",
	"front", "back".

2013-04-08  Dima Kogan  <dima@secretsauce.net>
