@@ -1,5 +1,5 @@
 /*
- * $Id: wxt_gui.cpp,v 1.110 2013/04/05 10:09:04 markisch Exp $
+ * $Id: wxt_gui.cpp,v 1.111 2013/04/22 17:39:22 sfeam Exp $
  */
 
 /* GNUPLOT - wxt_gui.cpp */
@@ -1660,7 +1660,11 @@ void wxt_init()
 		if (!wxInitialize()) {
 			fprintf(stderr,"Failed to initialize wxWidgets.\n");
 			wxt_abort_init = true;
-			return;
+			if (interactive) {
+				change_term("unknown",7);
+				int_error(NO_CARET,"wxt init failure");
+			} else
+				exit(-1);
 		}
 
 		/* app initialization */
