@@ -1,3 +1,8 @@
+2013-04-22  Ethan A Merritt  <merritt@u.washington.edu>
+
+	* src/wxterminal/wxt_gui.cpp (wxt_init):  Exit cleanly if initialization
+	fails.
+
 2013-04-21  Ethan A Merritt  <merritt@u.washington.edu>
 
 	* src/gplt_x11.c term/x11.trm:  X11 terminal support for toggling plots
